application-terraform-files/security-groups/main.tf
variable "ec2_sg_name"{}
variable "vpc_id" {}
variable "rds_sg_name"{}
variable "public_subnet_cidr_block" {}
variable "pythonApi-sg-name" {}
variable "vpc_block"{}


output "ec2-sg-id"{
  value = aws_security_group.ec2_sg.id
}

output "rds-sg-id"{
  value = aws_security_group.rds_sg.id
}

output "pythonApi-sg-id"{
  value = aws_security_group.pythonApi-sg.id
}

resource "aws_security_group" "ec2_sg" {
  name        = var.ec2_sg_name
  description = "Enable the Port 22(SSH) & Port 80(http)"
  vpc_id      = var.vpc_id

  # ssh for terraform remote exec
  ingress {
    description = "Allow remote SSH from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # enable http
  ingress {
    description = "Allow HTTP request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  # enable http
  ingress {
    description = "Allow HTTP request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  #Outgoing request
  egress {
    description = "Allow outgoing request"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Security Groups to allow SSH(22) and HTTP(80)"
  }
}

resource "aws_security_group" "rds_sg"{
  name = var.rds_sg_name
  description =  "Allow access to RDS from EC2 present in public subnet"
  vpc_id = var.vpc_id
  ingress{
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    #cidr_blocks = var.public_subnet_cidr_block
    security_groups = [aws_security_group.ec2_sg.id]
  }
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = var.vpc_block
  }
}

resource "aws_security_group" "pythonApi-sg" {
  name        = var.pythonApi-sg-name
  description = "Enable the Port 5000 for python api"
  vpc_id      = var.vpc_id

  # ssh for terraform remote exec
  ingress {
    description = "Allow traffic on port 5000"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    
  }

  tags = {
    Name = "Security Groups to allow traffic on port 5000"
  }
}
